@@ -131,7 +131,7 @@ namespace NHibernate.Envers.Configuration.Metadata
 			var indexComponentData = addIndex(null, null);
 
 			// Generating the query generator - it should read directly from the related entity.
-			var queryGenerator = new OneAuditEntityQueryGenerator(_mainGenerator.GlobalCfg, _mainGenerator.VerEntCfg,
+			var queryGenerator = new OneAuditEntityQueryGenerator(_mainGenerator.VerEntCfg,
 					_mainGenerator.AuditStrategy, referencingIdData, _referencedEntityName, referencedIdData);
 
 			// Creating common mapper data.
@@ -299,8 +299,7 @@ namespace NHibernate.Envers.Configuration.Metadata
 			// Creating a query generator builder, to which additional id data will be added, in case this collection
 			// references some entities (either from the element or index). At the end, this will be used to build
 			// a query generator to read the raw data collection from the middle table.
-			var queryGeneratorBuilder = new QueryGeneratorBuilder(_mainGenerator.GlobalCfg,
-					_mainGenerator.VerEntCfg, _mainGenerator.AuditStrategy, referencingIdData, auditMiddleEntityName);
+			var queryGeneratorBuilder = new QueryGeneratorBuilder(_mainGenerator.VerEntCfg, _mainGenerator.AuditStrategy, referencingIdData, auditMiddleEntityName);
 
 			// Adding the XML mapping for the referencing entity, if the relation isn't inverse.
 			if (middleEntityXml != null)
